@@ -1,0 +1,1 @@
+../../../assets/socky_hosts.yml
